# python-project-50

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  pyci.yml
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  diff.py  gendiff.py  parser.py
ruff/: pyproject.toml
tests/: test_diff.py  test_parser.py
