[project]
name = "hexlet-code"
version = "0.1.0"
authors = [
    {name = "Ilia Turygin", email = "ilia.turygin@gmail.com"},
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]